@@ -1707,18 +1707,10 @@ int redir_ipc(struct redir_t *redir) {
 
   } else {
 
-    char *statedir = _options.statedir ? _options.statedir : DEFSTATEDIR;
     char filedest[512];
-    
-    if (!_options.unixipc) {
-      snprintf(filedest, sizeof(filedest), "%s/chilli.ipc", statedir);
-    } else {
-      if (_options.unixipc[0]=='/')
-        snprintf(filedest, sizeof(filedest), "%s", _options.unixipc);
-      else
-        snprintf(filedest, sizeof(filedest), "%s/%s", statedir, _options.unixipc);
-    }
 
+    statedir_file(filedest, sizeof(filedest), _options.unixipc, "chilli.ipc");
+    
     local.sun_family = AF_UNIX;
     
     strcpy(local.sun_path, filedest);
@@ -2950,11 +2942,9 @@ int redir_send_msg(struct redir_t *this, struct redir_msg_t *msg) {
   size_t len = sizeof(remote);
   int s;
 
-  char *statedir = _options.statedir ? _options.statedir : DEFSTATEDIR;
   char filedest[512];
 
-  snprintf(filedest, sizeof(filedest), "%s/%s", statedir, 
-	   _options.unixipc ? _options.unixipc : "chilli.ipc");
+  statedir_file(filedest, sizeof(filedest), _options.unixipc, "chilli.ipc");
 
   if ((s = socket(AF_UNIX, SOCK_STREAM, 0)) == -1) {
     perror("socket");
